<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FontCreatorLocalActivity!</string>
    <string name="app_name">FontCreatorLocal</string>
    <string name="A">A</string>
    <string name="prev">&lt;&lt;Prev</string>
    <string name="next">Next>></string>
    <string name="save">Save</string>
    <string name="new_font">New Font</string>
    <string name="existing_font">Existing Font</string>
    <string name="help">Help</string>
    <string name="select_font">Select Font</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="export_font">Export Font</string>
    <string name="use_font">Use Font</string>
    <string name="display_font">Display Font</string>
    <string name="edit_font">Edit Font</string>
    <string name="serif">Serif</string>
    <string name="this_is_where_help_goes">This is where help goes.</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="main">Main Menu</string>
    <string name="UCLetters">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</string>
   	<string name="LCLetters">a b c d e f g h i j k l m n o p q r s t u v w x y z</string>
   	<string name="numbers">0 1 2 3 4 5 6 7 8 9</string>
   	<string name="symbols">. , ; ! @ # $ % ^ &amp; * ( )</string>
    <string name="send_string">SEND</string>
    <string name="email_to_string">E-mail To:</string>
    <string name="email_note">E-mail Note</string>
    
    <string-array name="Fonts_Array">
		<item>Sample 1</item>
		<item>Sample 2</item>
		<item>Sample 3</item>
	</string-array>
   	
</resources>