<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/existingfontroot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/ltblue"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/selectFontTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="63dp"
        android:layout_y="30dp"
        android:text="@string/select_font"
        android:textColor="@color/black"
        android:textSize="18dip" />

    <Button
        android:id="@+id/button1"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_x="126dp"
        android:layout_y="127dp"
        android:background="@drawable/button"
        android:text="@string/cancel"
        android:textColor="@color/white1" />

    <Button
        android:id="@+id/chooseExistingFontButton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_x="36dp"
        android:layout_y="127dp"
        android:background="@drawable/button"
        android:text="@string/ok"
        android:textColor="@color/white1" />

    <Spinner
        android:id="@+id/chooseExistingFontSpinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_x="16dp"
        android:layout_y="67dp" />

</AbsoluteLayout>